Implements picture live preview feature. WIP

--- a/app/views/alchemy/admin/essence_pictures/update.js.erb
+++ b/app/views/alchemy/admin/essence_pictures/update.js.erb
@@ -4,6 +4,7 @@
   Alchemy.setElementDirty('#element_<%= @content.element.id %>');
 <% if @content.ingredient %>
   $('.thumbnail_background img', '#<%= @content.dom_id %>').replaceWith('<%= essence_picture_thumbnail(@content, @options) %>');
+  $('#element_<%= @element.id %>').trigger('Alchemy.PictureChange', [<%= @content.id %>, '<%= @preview_url.html_safe %>']);
   Alchemy.ImageLoader('#<%= @content.dom_id %> .thumbnail_background');
 <% end %>
 })(jQuery);
