Changes to keymaster as hotkey js lib. Fixes some (not all) of the hotkeys issues.

--- a/app/views/alchemy/admin/attachments/index.html.erb
+++ b/app/views/alchemy/admin/attachments/index.html.erb
@@ -4,7 +4,7 @@
     {
       icon: 'upload',
       url: alchemy.new_admin_attachment_path,
-      hotkey: 'alt-n',
+      hotkey: 'alt+n',
       overlay_options: {
         title: _t(:upload_file),
         size: '540x550'
