--- a/app/views/alchemy/admin/dashboard/index.html.erb
+++ b/app/views/alchemy/admin/dashboard/index.html.erb
@@ -10,7 +10,7 @@
         size: "420x360"
       },
       if_permitted_to: [:info, :alchemy_admin_dashboard],
-      hotkey: 'alt-i'
+      hotkey: 'alt+i'
     }
   ],
   search: false
