--- a/app/views/alchemy/admin/layoutpages/index.html.erb
+++ b/app/views/alchemy/admin/layoutpages/index.html.erb
@@ -24,7 +24,7 @@
   <%= toolbar_button(
     icon: 'add_page',
     url: alchemy.new_admin_page_path(parent_id: @layout_root.id, layoutpage: true),
-    hotkey: 'alt-n',
+    hotkey: 'alt+n',
     overlay_options: {
       title: _t('Add global page'),
       size: '340x150',
