--- a/app/views/alchemy/admin/tags/index.html.erb
+++ b/app/views/alchemy/admin/tags/index.html.erb
@@ -5,7 +5,7 @@
       label: _t('New Tag'),
       url: alchemy.new_admin_tag_path,
       title: _t('New Tag'),
-      hotkey: 'alt-n',
+      hotkey: 'alt+n',
       overlay_options: {
         title: _t('New Tag'),
         size: '310x210'
