--- a/app/views/alchemy/base/500.html.erb
+++ b/app/views/alchemy/base/500.html.erb
@@ -5,7 +5,7 @@
       url: request.referer || "#{Alchemy::MountPoint.get}/admin/dashboard",
       label: _t(:back),
       title: _t(:back),
-      hotkey: 'alt-z',
+      hotkey: 'alt+z',
       overlay: false,
       skip_permission_check: true
     }
