--- a/app/views/layouts/alchemy/admin.html.erb
+++ b/app/views/layouts/alchemy/admin.html.erb
@@ -49,7 +49,7 @@
             alchemy.leave_admin_path, {
               :size => "300x105",
               :title => _t("Leave Alchemy")
-          }, {'data-alchemy-hotkey' => 'alt-q'}) %>
+          }, {'data-alchemy-hotkey' => 'alt+q'}) %>
         <% else %>
           <%= link_to(alchemy.root_path) do %>
             <span class="module icon exit"></span>
