--- a/app/views/alchemy/admin/sites/index.html.erb
+++ b/app/views/alchemy/admin/sites/index.html.erb
@@ -7,7 +7,7 @@
       label: label_title,
       url: new_resource_path,
       title: label_title,
-      hotkey: 'alt-n',
+      hotkey: 'alt+n',
       overlay_options: {
         title: label_title,
         size: resource_window_size
